# shop

./: README.md  backup  publish.fsh  pyproject.toml  requirements.txt
shop/: __init__.py  __main__.py  server.py  snapshot.py  svm.py
testdir/: .shop
