[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "shop"
author = "Pradhyum R"
author-email = "drpradhyum2016@outlook.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "click",
    "halo",
    "pyinquirer",
    "rich",
]
description-file = "README.md"
dist-name = "shop-vc"

[tool.flit.scripts]
shop = "shop.__main__:main"
